@@ -24,6 +24,7 @@ Bug reports and comments
 Thanks are due to the following individuals for helpful comments, bug reports
 and small patches:
 
+Michael Elsdörfer (sort by multiple values test and prototype)
 Bruno Rezende
 
 
